tests/baselines/reference/letAndVarRedeclaration.errors.txt
tests/cases/compiler/letAndVarRedeclaration.ts(2,5): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(3,5): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(4,10): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(7,9): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(8,9): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(9,14): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(13,9): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(15,13): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(18,18): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(23,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(24,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(25,14): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(29,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(31,13): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(34,18): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(38,5): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(39,10): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(43,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(44,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(49,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(50,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.


==== tests/cases/compiler/letAndVarRedeclaration.ts (21 errors) ====
    
    let e0
        ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    var e0;
        ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    function e0() { }
             ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    
    function f0() {
        let x1;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
        var x1;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
        function x1() { }
                 ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
    }
    
    function f1() {
        let x;
            ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        {
            var x;
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
        {
            function x() { }
                     ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
    }
    
    module M0 {
        let x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        var x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        function x2() { }
                 ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
    }
    
    module M1 {
        let x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        {
            var x2;
                ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
        {
            function x2() { }
                     ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
    }
    
    let x11;
        ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    for (var x11; ;) {
             ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    }
    
    function f2() {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }
    
    module M2 {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }